bluegreen/svc-prd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-prd
  name: web-prd
  namespace: blue-green
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-blue
  sessionAffinity: None
  type: NodePort
