bluegreen/prd-istio-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webprd-gateway
  namespace: blue-green
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "labk8swebprd.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webprd
  namespace: blue-green
spec:
  hosts:
  - "labk8swebprd.example.com"
  gateways:
  - webprd-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: web-blue
      weight: 0
    - destination:
        port:
          number: 8080
        host: web-green
      weight: 100
